tests/error/comprehension_errors/used_twice2.py
import guppylang.prelude.quantum as quantum
from guppylang.decorator import guppy
from guppylang.module import GuppyModule
from guppylang.hugr.tys import Qubit
from guppylang.prelude.builtins import linst

module = GuppyModule("test")
module.load(quantum)


@guppy.declare(module)
def bar(q: Qubit) -> bool:
    ...


@guppy(module)
def foo(qs: linst[Qubit]) -> linst[Qubit]:
    return [q for q in qs if bar(q)]


module.compile()
